<resources>
    <string name="app_name">Arithmetic</string>
    <string name="first_number">First Number: </string>
    <string name="second_number">Second Number: </string>
    <string name="text_input_placeholder">Your number here.</string>
    <string name="calculate">Calculate</string>
    <string name="modulus">%</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="division">/</string>
    <string name="multiplication">x</string>
    <string name="result">Result: </string>
    <string name="answer">Answer</string>
</resources>